# paprika

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.md  start.sh
imagenet/n01440764/: n01440764_activation_tensor.pt  n01440764_dictionary.json
imagenet/n01443537/: n01443537_activation_tensor.pt  n01443537_dictionary.json
imagenet/n01484850/: n01484850_activation_tensor.pt  n01484850_dictionary.json
imagenet/n01491361/: n01491361_activation_tensor.pt  n01491361_dictionary.json
imagenet/n01494475/: n01494475_activation_tensor.pt  n01494475_dictionary.json
imagenet/n01496331/: n01496331_activation_tensor.pt  n01496331_dictionary.json
imagenet/n01498041/: n01498041_activation_tensor.pt  n01498041_dictionary.json
imagenet/n01514668/: n01514668_activation_tensor.pt  n01514668_dictionary.json
imagenet/n01514859/: n01514859_activation_tensor.pt  n01514859_dictionary.json
imagenet/n01518878/: n01518878_activation_tensor.pt  n01518878_dictionary.json
imagenet/n01530575/: n01530575_activation_tensor.pt  n01530575_dictionary.json
imagenet/n01531178/: n01531178_activation_tensor.pt  n01531178_dictionary.json
scripts/: analysis-without-gui.py  classify-example.py  copy-imagenet-portion.py  delete_precomputed_tensors.py  grouped-class-score-computation.py  grouped_classes.csv  old_labels.txt  precomputations-with-predictions.py  precomputations.py  produce-visualisation-images.py  qt-see-fonts.py  run-ui-test.py  run-ui.py  test_without_webcam.py  translations-add-id-and-english.py  translations.csv  verify-complete-imagenet.py  verify-grouped-classes.py
(+1990 files in other folders)
