[tool.poetry]
name = "paprika"
version = "0.1.0"
description = ""
authors = ["Conzel <38732545+Conzel@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
