[tool.poetry]
name = "paprika"
version = "0.1.0"
description = "Art project for the Tubingen Stadtmuseum, exhibiting how an AI classifies images"
authors = ["Conzel <38732545+Conzel@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
opencv-python = "^4.6.0.66"
torch = {url="https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp39-cp39-linux_x86_64.whl"}
torchvision = {url="https://download.pytorch.org/whl/cu116/torchvision-0.13.1%2Bcu116-cp39-cp39-linux_x86_64.whl"}
PyQt5 = "^5.15.7"
grad-cam = {git = "https://github.com/jacobgil/pytorch-grad-cam.git"}
torch-lucent = {git = "https://github.com/greentfrapp/lucent.git"}
pandas = "^1.5.2"
scikit-image = "^0.19.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
